[ADD]: client | review stars btn styles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.review-btn {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.on {
+  color: #ffc107;
+}
+.off {
+  color: #ccc;
+}
+
